# RobotKin

./: CMakeLists.txt  README.md  specs.txt
include/: Constraints.h  Frame.h  Hubo.h  Linkage.h  Robot.h  urdf_parsing.h
parsing/: urdf_parsing.cpp
src/: Constraints.cpp  Frame.cpp  Hubo.cpp  Linkage.cpp  Robot.cpp  Solvers.cpp
test/: auxTests.cpp  ikUnitTest.cpp  robotTest.cpp
